--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   get_it: ^7.6.0
   sqflite: ^2.2.8+4
   path: ^1.8.2
+  firebase_auth: ^4.16.0
+  firebase_core: ^2.24.2
 
 dev_dependencies:
   flutter_test:
@@ -64,8 +66,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/logo.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
