--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   firebase_auth: ^4.16.0
   firebase_core: ^2.24.2
   fluttertoast: ^8.2.5
+  flutter_secure_storage: ^8.1.0
 
 dev_dependencies:
   flutter_test:
